[package]
name = "drone"
version = "0.1.0"
authors = ["nash <nash@iffy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version= "*", default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"